Split the JS code into modules

--- a/src/PrimerSearch.html
+++ b/src/PrimerSearch.html
@@ -5,9 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.12.0/src/toastify.min.css">
 	<link rel="stylesheet" href="res/PrimerSearch.css">
-	<script src="https://cdn.jsdelivr.net/npm/toastify-js@1.12.0/src/toastify.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/mark.js@8.11.1/dist/mark.min.js"></script>
-	<script src="res/PrimerSearch.js" defer></script>
+	<script type="module" src="res/PrimerSearch.js"></script>
 	<title>PrimerSearch</title>
 </head>
 
