--- a/src/PrimerSearch.html
+++ b/src/PrimerSearch.html
@@ -23,39 +23,38 @@
       <section>
         <h1>Primers</h1>
         <button type="button" id="add-primer-pair-btn">Add pair</button>
-        <ul id="primer-pair-list" class="data">
-          <template id="primer-pair-template">
-            <li class="primer-pair">
-              <label>F: <input type="text" class="primer" /></label>
-              <label>R: <input type="text" class="primer" /></label>
-              <button
-                type="button"
-                class="remove-primer-pair-btn"
-                title="Remove primer pair"
-              >
-                ×
-              </button>
-              <div class="footer">
-                <button
-                  type="button"
-                  title="Mark primer pair in gene sequence"
-                  class="mark-primer-pair-btn"
-                >
-                  <img src="res/icons/star.svg" />
-                </button>
-                <button
-                  type="button"
-                  title="Copy primer pair info"
-                  class="copy-pair-info-btn"
-                >
-                  <img src="res/icons/copy.svg" />
-                </button>
-                <span class="product-length">Product length: {pl}</span>
-              </div>
-            </li>
-          </template>
-        </ul>
+        <ul id="primer-pair-list" class="data"></ul>
       </section>
     </main>
+    <template id="primer-pair-template">
+      <li class="primer-pair">
+        <label>F: <input type="text" class="primer" /></label>
+        <label>R: <input type="text" class="primer" /></label>
+        <button
+          type="button"
+          class="remove-primer-pair-btn"
+          title="Remove primer pair"
+        >
+          ×
+        </button>
+        <div class="footer">
+          <button
+            type="button"
+            title="Mark primer pair in gene sequence"
+            class="mark-primer-pair-btn"
+          >
+            <img src="res/icons/star.svg" />
+          </button>
+          <button
+            type="button"
+            title="Copy primer pair info"
+            class="copy-pair-info-btn"
+          >
+            <img src="res/icons/copy.svg" />
+          </button>
+          <span class="product-length">Product length: {pl}</span>
+        </div>
+      </li>
+    </template>
   </body>
 </html>
