--- a/src/PrimerSearch.html
+++ b/src/PrimerSearch.html
@@ -30,26 +30,12 @@
       <li class="primer-pair">
         <label>F: <input type="text" class="primer" /></label>
         <label>R: <input type="text" class="primer" /></label>
-        <button
-          type="button"
-          class="remove-primer-pair-btn"
-          title="Remove primer pair"
-        >
-          ×
-        </button>
+        <button type="button" class="remove-primer-pair-btn">×</button>
         <div class="footer">
-          <button
-            type="button"
-            title="Mark primer pair in gene sequence"
-            class="mark-primer-pair-btn"
-          >
+          <button type="button" class="mark-primer-pair-btn">
             <img src="res/icons/star.svg" />
           </button>
-          <button
-            type="button"
-            title="Copy primer pair info"
-            class="copy-pair-info-btn"
-          >
+          <button type="button" class="copy-pair-info-btn">
             <img src="res/icons/copy.svg" />
           </button>
           <span class="product-length">Product length: {pl}</span>
