Restructure the client side

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="PrimerSearch.css" />
-    <script type="module" src="PrimerSearch.js"></script>
+    <link rel="stylesheet" href="primer-search.css" />
+    <script type="module" src="primer-search.js"></script>
     <title>PrimerSearch</title>
   </head>
   <body>
