Add a button to remove all primer pairs

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -43,7 +43,12 @@
         </div>
         <div class="v-flex">
           <h1>Primers</h1>
-          <button type="button" id="add-primer-pair-btn">Add pair</button>
+          <div>
+            <button type="button" id="add-primer-pair-btn">Add pair</button>
+            <button type="button" id="remove-all-primer-pairs-btn">
+              Remove all pairs
+            </button>
+          </div>
           <ul id="primer-pair-list" class="data"></ul>
         </div>
       </section>
