Use 0 as the default product length

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -65,7 +65,7 @@
           <button type="button" class="copy-pair-info-btn">
             <img src="icons/copy.svg" />
           </button>
-          <span class="product-length">Product length: {pl}</span>
+          <span class="product-length">Product length: 0</span>
         </div>
       </li>
     </template>
